y.output
Terminals unused in grammar

   TK_OPER_ADD
   TK_OPER_SUB
   TK_OPER_MUL
   TK_OPER_DIV
   TK_OPER_LESS
   TK_OPER_GRT
   TK_OPER_ASSIGN
   TK_OPER_POINTER
   TK_SEPR_LBRA
   TK_SEPR_RBRA
   TK_SEPR_LPAR
   TK_SEPR_RPAR
   TK_SEPR_SCOL
   TK_SEPR_COMA
   TK_WHITE
   TK_ERR


State 68 conflicts: 13 reduce/reduce
State 129 conflicts: 2 shift/reduce
State 130 conflicts: 2 shift/reduce
State 138 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAM $end

    1 EXPR_PRIME: CONST
    2           | TK_NAME_ID
    3           | FUNC_CALL
    4           | '(' EXPR ')'
    5           | error

    6 CONST: TK_CONS_INT
    7      | TK_CONS_FLOAT
    8      | TK_CONS_CHAR
    9      | TK_CONS_STRING
   10      | error

   11 FUNC_CALL: TK_NAME_ID '(' FUNC_ARG_LIST ')'
   12          | TK_NAME_ID '(' ')'

   13 FUNC_ARG_LIST: FUNC_ARG_FIRST FUNC_ARG_MORE

   14 FUNC_ARG_FIRST: '&' TK_NAME_ID
   15               | EXPR

   16 FUNC_ARG_MORE: %empty
   17              | ',' EXPR FUNC_ARG_MORE
   18              | ',' '&' TK_NAME_ID FUNC_ARG_MORE

   19 EXPR: EXPR_COMP
   20     | EXPR_COMP TK_OPER_EQ EXPR_COMP
   21     | EXPR_COMP TK_OPER_NEQ EXPR_COMP

   22 EXPR_COMP: EXPR_ADD
   23          | EXPR_ADD '<' EXPR_ADD
   24          | EXPR_ADD TK_OPER_LE EXPR_ADD
   25          | EXPR_ADD '>' EXPR_ADD
   26          | EXPR_ADD TK_OPER_GE EXPR_ADD

   27 EXPR_ADD: EXPR_MUL
   28         | EXPR_ADD '+' EXPR_ADD
   29         | EXPR_ADD '-' EXPR_ADD

   30 EXPR_MUL: EXPR_UNARY
   31         | EXPR_MUL '*' EXPR_UNARY
   32         | EXPR_MUL '/' EXPR_UNARY

   33 EXPR_UNARY: EXPR_PRIME
   34           | '+' EXPR_UNARY
   35           | '-' EXPR_UNARY

   36 STMT: STMT_ASSIGN
   37     | STMT_IF
   38     | STMT_WHILE
   39     | STMT_RETURN
   40     | STMT_BLOCK
   41     | STMT_FUNC_CALL
   42     | STMT_EMPTY
   43     | error ';'

   44 STMT_ASSIGN: TK_NAME_ID '=' EXPR ';'

   45 STMT_IF: TK_CTRL_IF '(' EXPR ')' STMT
   46        | TK_CTRL_IF '(' EXPR ')' STMT TK_CTRL_ELSE STMT

   47 STMT_WHILE: TK_CTRL_WHILE '(' EXPR ')' STMT

   48 STMT_BLOCK: '{' STMT_LIST '}'

   49 STMT_LIST: %empty
   50          | STMT STMT_LIST

   51 STMT_FUNC_CALL: FUNC_CALL ';'

   52 STMT_EMPTY: ';'

   53 STMT_RETURN: TK_CTRL_RETURN ';'
   54            | TK_CTRL_RETURN EXPR ';'

   55 TYPE: TK_TYPE_INT
   56     | TK_TYPE_CHAR
   57     | TK_TYPE_FLOAT

   58 FUNC_RETURN_TYPE: TK_TYPE_VOID
   59                 | TYPE

   60 FUNC_PARAM: TYPE TK_NAME_ID

   61 FUNC_PARAM_LIST: FUNC_PARAM
   62                | FUNC_PARAM ',' FUNC_PARAM_LIST

   63 FUNC_VAR_DEF: TYPE TK_NAME_ID '=' CONST ';'

   64 FUNC_VAR_DEF_LIST: %empty
   65                  | FUNC_VAR_DEF FUNC_VAR_DEF_LIST

   66 FUNC_STMT_LIST: STMT_RETURN
   67               | STMT FUNC_STMT_LIST

   68 FUNC_BODY: FUNC_VAR_DEF_LIST FUNC_STMT_LIST

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' FUNC_PARAM_LIST ')' '{' FUNC_BODY '}'
   70         | FUNC_RETURN_TYPE TK_NAME_ID '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}'

   71 PROGRAM: PROGRAM_FUNC_DEF_LIST PROGRAM_MAIN_FUNC PROGRAM_FUNC_DEF_LIST

   72 PROGRAM_FUNC_DEF_LIST: %empty
   73                      | FUNC_DEF PROGRAM_FUNC_DEF_LIST

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}'
   75                  | TK_MAIN '(' ')' '{' FUNC_BODY '}'


Terminals, with rules where they appear

$end (0) 0
'&' (38) 14 18
'(' (40) 4 11 12 45 46 47 69 70 74 75
')' (41) 4 11 12 45 46 47 69 70 74 75
'*' (42) 31
'+' (43) 28 34
',' (44) 17 18 62
'-' (45) 29 35
'/' (47) 32
';' (59) 43 44 51 52 53 54 63
'<' (60) 23
'=' (61) 44 63
'>' (62) 25
'{' (123) 48 69 70 74 75
'}' (125) 48 69 70 74 75
error (256) 5 10 43
TK_TYPE_VOID (258) 58 70 74
TK_TYPE_INT (259) 55
TK_TYPE_CHAR (260) 56
TK_TYPE_FLOAT (261) 57
TK_CTRL_IF (262) 45 46
TK_CTRL_ELSE (263) 46
TK_CTRL_WHILE (264) 47
TK_CTRL_RETURN (265) 53 54
TK_MAIN (266) 74 75
TK_NAME_ID (267) 2 11 12 14 18 44 60 63 69 70
TK_CONS_INT (268) 6
TK_CONS_CHAR (269) 8
TK_CONS_FLOAT (270) 7
TK_CONS_STRING (271) 9
TK_OPER_ADD (272)
TK_OPER_SUB (273)
TK_OPER_MUL (274)
TK_OPER_DIV (275)
TK_OPER_EQ (276) 20
TK_OPER_NEQ (277) 21
TK_OPER_LESS (278)
TK_OPER_LE (279) 24
TK_OPER_GRT (280)
TK_OPER_GE (281) 26
TK_OPER_ASSIGN (282)
TK_OPER_POINTER (283)
TK_SEPR_LBRA (284)
TK_SEPR_RBRA (285)
TK_SEPR_LPAR (286)
TK_SEPR_RPAR (287)
TK_SEPR_SCOL (288)
TK_SEPR_COMA (289)
TK_WHITE (290)
TK_ERR (291)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
EXPR_PRIME (52)
    on left: 1 2 3 4 5, on right: 33
CONST (53)
    on left: 6 7 8 9 10, on right: 1 63
FUNC_CALL (54)
    on left: 11 12, on right: 3 51
FUNC_ARG_LIST (55)
    on left: 13, on right: 11
FUNC_ARG_FIRST (56)
    on left: 14 15, on right: 13
FUNC_ARG_MORE (57)
    on left: 16 17 18, on right: 13 17 18
EXPR (58)
    on left: 19 20 21, on right: 4 15 17 44 45 46 47 54
EXPR_COMP (59)
    on left: 22 23 24 25 26, on right: 19 20 21
EXPR_ADD (60)
    on left: 27 28 29, on right: 22 23 24 25 26 28 29
EXPR_MUL (61)
    on left: 30 31 32, on right: 27 31 32
EXPR_UNARY (62)
    on left: 33 34 35, on right: 30 31 32 34 35
STMT (63)
    on left: 36 37 38 39 40 41 42 43, on right: 45 46 47 50 67
STMT_ASSIGN (64)
    on left: 44, on right: 36
STMT_IF (65)
    on left: 45 46, on right: 37
STMT_WHILE (66)
    on left: 47, on right: 38
STMT_BLOCK (67)
    on left: 48, on right: 40
STMT_LIST (68)
    on left: 49 50, on right: 48 50
STMT_FUNC_CALL (69)
    on left: 51, on right: 41
STMT_EMPTY (70)
    on left: 52, on right: 42
STMT_RETURN (71)
    on left: 53 54, on right: 39 66
TYPE (72)
    on left: 55 56 57, on right: 59 60 63
FUNC_RETURN_TYPE (73)
    on left: 58 59, on right: 69 70
FUNC_PARAM (74)
    on left: 60, on right: 61 62
FUNC_PARAM_LIST (75)
    on left: 61 62, on right: 62 69
FUNC_VAR_DEF (76)
    on left: 63, on right: 65
FUNC_VAR_DEF_LIST (77)
    on left: 64 65, on right: 65 68
FUNC_STMT_LIST (78)
    on left: 66 67, on right: 67 68
FUNC_BODY (79)
    on left: 68, on right: 69 70 74 75
FUNC_DEF (80)
    on left: 69 70, on right: 73
PROGRAM (81)
    on left: 71, on right: 0
PROGRAM_FUNC_DEF_LIST (82)
    on left: 72 73, on right: 71 73
PROGRAM_MAIN_FUNC (83)
    on left: 74 75, on right: 71


State 0

    0 $accept: . PROGRAM $end

    TK_TYPE_VOID   shift, and go to state 1
    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 72 (PROGRAM_FUNC_DEF_LIST)

    TYPE                   go to state 5
    FUNC_RETURN_TYPE       go to state 6
    FUNC_DEF               go to state 7
    PROGRAM                go to state 8
    PROGRAM_FUNC_DEF_LIST  go to state 9


State 1

   58 FUNC_RETURN_TYPE: TK_TYPE_VOID .

    $default  reduce using rule 58 (FUNC_RETURN_TYPE)


State 2

   55 TYPE: TK_TYPE_INT .

    $default  reduce using rule 55 (TYPE)


State 3

   56 TYPE: TK_TYPE_CHAR .

    $default  reduce using rule 56 (TYPE)


State 4

   57 TYPE: TK_TYPE_FLOAT .

    $default  reduce using rule 57 (TYPE)


State 5

   59 FUNC_RETURN_TYPE: TYPE .

    $default  reduce using rule 59 (FUNC_RETURN_TYPE)


State 6

   69 FUNC_DEF: FUNC_RETURN_TYPE . TK_NAME_ID '(' FUNC_PARAM_LIST ')' '{' FUNC_BODY '}'
   70         | FUNC_RETURN_TYPE . TK_NAME_ID '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}'

    TK_NAME_ID  shift, and go to state 10


State 7

   73 PROGRAM_FUNC_DEF_LIST: FUNC_DEF . PROGRAM_FUNC_DEF_LIST

    TK_TYPE_VOID   shift, and go to state 1
    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 72 (PROGRAM_FUNC_DEF_LIST)

    TYPE                   go to state 5
    FUNC_RETURN_TYPE       go to state 6
    FUNC_DEF               go to state 7
    PROGRAM_FUNC_DEF_LIST  go to state 11


State 8

    0 $accept: PROGRAM . $end

    $end  shift, and go to state 12


State 9

   71 PROGRAM: PROGRAM_FUNC_DEF_LIST . PROGRAM_MAIN_FUNC PROGRAM_FUNC_DEF_LIST

    TK_MAIN  shift, and go to state 13

    PROGRAM_MAIN_FUNC  go to state 14


State 10

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID . '(' FUNC_PARAM_LIST ')' '{' FUNC_BODY '}'
   70         | FUNC_RETURN_TYPE TK_NAME_ID . '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}'

    '('  shift, and go to state 15


State 11

   73 PROGRAM_FUNC_DEF_LIST: FUNC_DEF PROGRAM_FUNC_DEF_LIST .

    $default  reduce using rule 73 (PROGRAM_FUNC_DEF_LIST)


State 12

    0 $accept: PROGRAM $end .

    $default  accept


State 13

   74 PROGRAM_MAIN_FUNC: TK_MAIN . '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}'
   75                  | TK_MAIN . '(' ')' '{' FUNC_BODY '}'

    '('  shift, and go to state 16


State 14

   71 PROGRAM: PROGRAM_FUNC_DEF_LIST PROGRAM_MAIN_FUNC . PROGRAM_FUNC_DEF_LIST

    TK_TYPE_VOID   shift, and go to state 1
    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 72 (PROGRAM_FUNC_DEF_LIST)

    TYPE                   go to state 5
    FUNC_RETURN_TYPE       go to state 6
    FUNC_DEF               go to state 7
    PROGRAM_FUNC_DEF_LIST  go to state 17


State 15

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' . FUNC_PARAM_LIST ')' '{' FUNC_BODY '}'
   70         | FUNC_RETURN_TYPE TK_NAME_ID '(' . TK_TYPE_VOID ')' '{' FUNC_BODY '}'

    TK_TYPE_VOID   shift, and go to state 18
    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    TYPE             go to state 19
    FUNC_PARAM       go to state 20
    FUNC_PARAM_LIST  go to state 21


State 16

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' . TK_TYPE_VOID ')' '{' FUNC_BODY '}'
   75                  | TK_MAIN '(' . ')' '{' FUNC_BODY '}'

    TK_TYPE_VOID  shift, and go to state 22
    ')'           shift, and go to state 23


State 17

   71 PROGRAM: PROGRAM_FUNC_DEF_LIST PROGRAM_MAIN_FUNC PROGRAM_FUNC_DEF_LIST .

    $default  reduce using rule 71 (PROGRAM)


State 18

   70 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' TK_TYPE_VOID . ')' '{' FUNC_BODY '}'

    ')'  shift, and go to state 24


State 19

   60 FUNC_PARAM: TYPE . TK_NAME_ID

    TK_NAME_ID  shift, and go to state 25


State 20

   61 FUNC_PARAM_LIST: FUNC_PARAM .
   62                | FUNC_PARAM . ',' FUNC_PARAM_LIST

    ','  shift, and go to state 26

    $default  reduce using rule 61 (FUNC_PARAM_LIST)


State 21

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' FUNC_PARAM_LIST . ')' '{' FUNC_BODY '}'

    ')'  shift, and go to state 27


State 22

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' TK_TYPE_VOID . ')' '{' FUNC_BODY '}'

    ')'  shift, and go to state 28


State 23

   75 PROGRAM_MAIN_FUNC: TK_MAIN '(' ')' . '{' FUNC_BODY '}'

    '{'  shift, and go to state 29


State 24

   70 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' TK_TYPE_VOID ')' . '{' FUNC_BODY '}'

    '{'  shift, and go to state 30


State 25

   60 FUNC_PARAM: TYPE TK_NAME_ID .

    $default  reduce using rule 60 (FUNC_PARAM)


State 26

   62 FUNC_PARAM_LIST: FUNC_PARAM ',' . FUNC_PARAM_LIST

    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    TYPE             go to state 19
    FUNC_PARAM       go to state 20
    FUNC_PARAM_LIST  go to state 31


State 27

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' FUNC_PARAM_LIST ')' . '{' FUNC_BODY '}'

    '{'  shift, and go to state 32


State 28

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' TK_TYPE_VOID ')' . '{' FUNC_BODY '}'

    '{'  shift, and go to state 33


State 29

   75 PROGRAM_MAIN_FUNC: TK_MAIN '(' ')' '{' . FUNC_BODY '}'

    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 64 (FUNC_VAR_DEF_LIST)

    TYPE               go to state 34
    FUNC_VAR_DEF       go to state 35
    FUNC_VAR_DEF_LIST  go to state 36
    FUNC_BODY          go to state 37


State 30

   70 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' TK_TYPE_VOID ')' '{' . FUNC_BODY '}'

    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 64 (FUNC_VAR_DEF_LIST)

    TYPE               go to state 34
    FUNC_VAR_DEF       go to state 35
    FUNC_VAR_DEF_LIST  go to state 36
    FUNC_BODY          go to state 38


State 31

   62 FUNC_PARAM_LIST: FUNC_PARAM ',' FUNC_PARAM_LIST .

    $default  reduce using rule 62 (FUNC_PARAM_LIST)


State 32

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' FUNC_PARAM_LIST ')' '{' . FUNC_BODY '}'

    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 64 (FUNC_VAR_DEF_LIST)

    TYPE               go to state 34
    FUNC_VAR_DEF       go to state 35
    FUNC_VAR_DEF_LIST  go to state 36
    FUNC_BODY          go to state 39


State 33

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' TK_TYPE_VOID ')' '{' . FUNC_BODY '}'

    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 64 (FUNC_VAR_DEF_LIST)

    TYPE               go to state 34
    FUNC_VAR_DEF       go to state 35
    FUNC_VAR_DEF_LIST  go to state 36
    FUNC_BODY          go to state 40


State 34

   63 FUNC_VAR_DEF: TYPE . TK_NAME_ID '=' CONST ';'

    TK_NAME_ID  shift, and go to state 41


State 35

   65 FUNC_VAR_DEF_LIST: FUNC_VAR_DEF . FUNC_VAR_DEF_LIST

    TK_TYPE_INT    shift, and go to state 2
    TK_TYPE_CHAR   shift, and go to state 3
    TK_TYPE_FLOAT  shift, and go to state 4

    $default  reduce using rule 64 (FUNC_VAR_DEF_LIST)

    TYPE               go to state 34
    FUNC_VAR_DEF       go to state 35
    FUNC_VAR_DEF_LIST  go to state 42


State 36

   68 FUNC_BODY: FUNC_VAR_DEF_LIST . FUNC_STMT_LIST

    error           shift, and go to state 43
    TK_CTRL_IF      shift, and go to state 44
    TK_CTRL_WHILE   shift, and go to state 45
    TK_CTRL_RETURN  shift, and go to state 46
    TK_NAME_ID      shift, and go to state 47
    ';'             shift, and go to state 48
    '{'             shift, and go to state 49

    FUNC_CALL       go to state 50
    STMT            go to state 51
    STMT_ASSIGN     go to state 52
    STMT_IF         go to state 53
    STMT_WHILE      go to state 54
    STMT_BLOCK      go to state 55
    STMT_FUNC_CALL  go to state 56
    STMT_EMPTY      go to state 57
    STMT_RETURN     go to state 58
    FUNC_STMT_LIST  go to state 59


State 37

   75 PROGRAM_MAIN_FUNC: TK_MAIN '(' ')' '{' FUNC_BODY . '}'

    '}'  shift, and go to state 60


State 38

   70 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' TK_TYPE_VOID ')' '{' FUNC_BODY . '}'

    '}'  shift, and go to state 61


State 39

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' FUNC_PARAM_LIST ')' '{' FUNC_BODY . '}'

    '}'  shift, and go to state 62


State 40

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' TK_TYPE_VOID ')' '{' FUNC_BODY . '}'

    '}'  shift, and go to state 63


State 41

   63 FUNC_VAR_DEF: TYPE TK_NAME_ID . '=' CONST ';'

    '='  shift, and go to state 64


State 42

   65 FUNC_VAR_DEF_LIST: FUNC_VAR_DEF FUNC_VAR_DEF_LIST .

    $default  reduce using rule 65 (FUNC_VAR_DEF_LIST)


State 43

   43 STMT: error . ';'

    ';'  shift, and go to state 65


State 44

   45 STMT_IF: TK_CTRL_IF . '(' EXPR ')' STMT
   46        | TK_CTRL_IF . '(' EXPR ')' STMT TK_CTRL_ELSE STMT

    '('  shift, and go to state 66


State 45

   47 STMT_WHILE: TK_CTRL_WHILE . '(' EXPR ')' STMT

    '('  shift, and go to state 67


State 46

   53 STMT_RETURN: TK_CTRL_RETURN . ';'
   54            | TK_CTRL_RETURN . EXPR ';'

    error           shift, and go to state 68
    TK_NAME_ID      shift, and go to state 69
    TK_CONS_INT     shift, and go to state 70
    TK_CONS_CHAR    shift, and go to state 71
    TK_CONS_FLOAT   shift, and go to state 72
    TK_CONS_STRING  shift, and go to state 73
    '('             shift, and go to state 74
    '+'             shift, and go to state 75
    '-'             shift, and go to state 76
    ';'             shift, and go to state 77

    EXPR_PRIME  go to state 78
    CONST       go to state 79
    FUNC_CALL   go to state 80
    EXPR        go to state 81
    EXPR_COMP   go to state 82
    EXPR_ADD    go to state 83
    EXPR_MUL    go to state 84
    EXPR_UNARY  go to state 85


State 47

   11 FUNC_CALL: TK_NAME_ID . '(' FUNC_ARG_LIST ')'
   12          | TK_NAME_ID . '(' ')'
   44 STMT_ASSIGN: TK_NAME_ID . '=' EXPR ';'

    '('  shift, and go to state 86
    '='  shift, and go to state 87


State 48

   52 STMT_EMPTY: ';' .

    $default  reduce using rule 52 (STMT_EMPTY)


State 49

   48 STMT_BLOCK: '{' . STMT_LIST '}'

    error           shift, and go to state 43
    TK_CTRL_IF      shift, and go to state 44
    TK_CTRL_WHILE   shift, and go to state 45
    TK_CTRL_RETURN  shift, and go to state 46
    TK_NAME_ID      shift, and go to state 47
    ';'             shift, and go to state 48
    '{'             shift, and go to state 49

    '}'  reduce using rule 49 (STMT_LIST)

    FUNC_CALL       go to state 50
    STMT            go to state 88
    STMT_ASSIGN     go to state 52
    STMT_IF         go to state 53
    STMT_WHILE      go to state 54
    STMT_BLOCK      go to state 55
    STMT_LIST       go to state 89
    STMT_FUNC_CALL  go to state 56
    STMT_EMPTY      go to state 57
    STMT_RETURN     go to state 90


State 50

   51 STMT_FUNC_CALL: FUNC_CALL . ';'

    ';'  shift, and go to state 91


State 51

   67 FUNC_STMT_LIST: STMT . FUNC_STMT_LIST

    error           shift, and go to state 43
    TK_CTRL_IF      shift, and go to state 44
    TK_CTRL_WHILE   shift, and go to state 45
    TK_CTRL_RETURN  shift, and go to state 46
    TK_NAME_ID      shift, and go to state 47
    ';'             shift, and go to state 48
    '{'             shift, and go to state 49

    FUNC_CALL       go to state 50
    STMT            go to state 51
    STMT_ASSIGN     go to state 52
    STMT_IF         go to state 53
    STMT_WHILE      go to state 54
    STMT_BLOCK      go to state 55
    STMT_FUNC_CALL  go to state 56
    STMT_EMPTY      go to state 57
    STMT_RETURN     go to state 58
    FUNC_STMT_LIST  go to state 92


State 52

   36 STMT: STMT_ASSIGN .

    $default  reduce using rule 36 (STMT)


State 53

   37 STMT: STMT_IF .

    $default  reduce using rule 37 (STMT)


State 54

   38 STMT: STMT_WHILE .

    $default  reduce using rule 38 (STMT)


State 55

   40 STMT: STMT_BLOCK .

    $default  reduce using rule 40 (STMT)


State 56

   41 STMT: STMT_FUNC_CALL .

    $default  reduce using rule 41 (STMT)


State 57

   42 STMT: STMT_EMPTY .

    $default  reduce using rule 42 (STMT)


State 58

   39 STMT: STMT_RETURN .
   66 FUNC_STMT_LIST: STMT_RETURN .

    '}'       reduce using rule 66 (FUNC_STMT_LIST)
    $default  reduce using rule 39 (STMT)


State 59

   68 FUNC_BODY: FUNC_VAR_DEF_LIST FUNC_STMT_LIST .

    $default  reduce using rule 68 (FUNC_BODY)


State 60

   75 PROGRAM_MAIN_FUNC: TK_MAIN '(' ')' '{' FUNC_BODY '}' .

    $default  reduce using rule 75 (PROGRAM_MAIN_FUNC)


State 61

   70 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}' .

    $default  reduce using rule 70 (FUNC_DEF)


State 62

   69 FUNC_DEF: FUNC_RETURN_TYPE TK_NAME_ID '(' FUNC_PARAM_LIST ')' '{' FUNC_BODY '}' .

    $default  reduce using rule 69 (FUNC_DEF)


State 63

   74 PROGRAM_MAIN_FUNC: TK_MAIN '(' TK_TYPE_VOID ')' '{' FUNC_BODY '}' .

    $default  reduce using rule 74 (PROGRAM_MAIN_FUNC)


State 64

   63 FUNC_VAR_DEF: TYPE TK_NAME_ID '=' . CONST ';'
